<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">Livo</string>
    <string name="company_id">Company Name</string>
    <string name="company_secret">Company Secret</string>
    <string name="user_id">User Name</string>
    <string name="user_secret">User Secret</string>
    <string name="company_continue">Continue</string>
    <string name="server_address">Server Address</string>
    <string name="save_config">Save</string>
    <string name="options">Options</string>
    <string name="port">Server Port, NULL for Default</string>
    <string name="current_server">Current Address:</string>
    <string name="current_appname">Current Application:</string>
    <string name="appName">Application Name</string>
    <string name="saveApplicationName">Save</string>
    <string name="settings">Settings</string>
    <string name="anonymous">Usage Statistics</string>
    <string name="remember_company">Remember Company Authentication</string>
    <string name="remember_user">Remember User Authentication</string>
    <string name="check_update">Check Updates in the Background</string>
    <string name="sing_in">Signing In</string>
    <string name="set_server_appid">Please enter required settings by using settings icon on left top</string>
    <string name="offline_usage">Use Offline</string>

</resources>
